--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,8 +1,6 @@
 // AUTOEXEC BY PAPAMICA //
 / // Pour tous les binds, vous pouvez changer les armes ainsi que les touches. //
 
-unbind F1
-unbind F2
 // BIND POUR LES ACHATS
 
 bind "a" "buy vesthelm; buy defuser; buy molotov; buy incgrenade; buy flashbang; buy hegrenade; buy smokegrenade;"
@@ -81,6 +79,27 @@ bind j +Big_Xhair
 
 
 // AUTRES COMMANDES
+
+con_enable "1"
+developer "0" // print console to screen
+con_filter_enable "2"
+con_filter_text "Damage "
+ui_steam_overlay_notification_position "bottomright"
+mm_dedicated_force_servers ""
+mm_csgo_community_search_players_min "8"
+gameinstructor_enable "0"
+option_duck_method "0"
+option_speed_method "0"
+cl_forcepreload "1"
+cl_join_advertise "2" // let friends join your game
+cl_disablehtmlmotd "0"
+cl_autohelp "0"
+cl_showhelp "0"
+cl_disablefreezecam "1"
+spec_replay_autostart "0"
+cl_dm_buyrandomweapons "0"
+cl_teammate_colors_show "1"
+hud_takesshots "1" // scoreboard screenshot at end of match
 host_writeconfig
 cl_disablefreezecam 1
 bindtoggle kp_leftarrow cl_righthand
